# PiFire-Screen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy.sh  lv_conf.h  lv_drv_conf.h  main.cpp
app/designed_files/Pixso/: CM4StackDemo.sketch  CM4StackDemo.sketch:Zone.Identifier
app/ui/: ui.c  ui.h  ui_font_HarmonyOSSansSCMedium14.c  ui_helpers.c  ui_helpers.h  ui_img_667599197.c  ui_img_clockbg_png.c  ui_img_cloudy_png.c  ui_img_coverbg_png.c  ui_img_flame_png.c  ui_img_heavyrain_png.c  ui_img_hot_png.c  ui_img_ic_grill_pellets_png.c  ui_img_ic_grill_png.c  ui_img_ic_ignition_png.c  ui_img_ic_menu_events_png.c  ui_img_ic_menu_history_png.c  ui_img_ic_menu_recipes_png.c  ui_img_ic_menu_settings_png.c  ui_img_ic_settings_pwm_png.c  ui_img_infobg_png.c  ui_img_logobg_png.c  ui_img_rain_png.c  ui_img_refreshing_png.c  ui_img_smile_png.c  ui_img_snow_png.c  ui_img_sunny_png.c
lv_porting/: CMakeLists.txt  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h
